#73. add code coverage badge

--- a/README.adoc
+++ b/README.adoc
@@ -6,6 +6,10 @@ Service for ingesting data from VK API.
 
 image:https://travis-ci.org/vuzoll/vuzoll-ingest-vk-data.svg?branch=develop["Travis job", link="https://travis-ci.org/vuzoll/vuzoll-ingest-vk-data"]
 
+== Code coverage
+
+image:https://codecov.io/gh/vuzoll/vuzoll-ingest-vk-data/branch/develop/graph/badge.svg["Code coverage", link="https://codecov.io/gh/vuzoll/vuzoll-ingest-vk-data"]
+
 == Docker repository
 
 https://hub.docker.com/r/vuzoll/vuzoll-ingest-vk-data/
